--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -4,7 +4,7 @@
         <link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Topic Title VM-laptop</h1>
+        <h1>Topic Title VM-laptop-Lap</h1>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
