--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -4,7 +4,6 @@
         <link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Topic Title VM-laptop-VM-hello</h1>
-        <p>Delete this text and replace it with your own content.asds</p>
+        <h1>Topic s</h1>
     </body>
 </html>
